# mldevops_exercise

./: .gitignore  .pre-commit-config.yaml  projekt.ipynb  projekt2.ipynb  pyproject.toml
