[tool.poetry]
name = "mldevops-exercise"
version = "0.1.0"
description = ""
authors = ["Julia Zon <jzon@student.agh.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
torch = "^2.5.1"
torchvision = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
